k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmu-api-tactical
  labels:
    app: rmu-api-tactical
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmu-api-tactical
  template:
    metadata:
      labels:
        app: rmu-api-tactical
    spec:
      containers:
      - name: rmu-api-tactical
        image: labcabrera/rmu-api-tactical:latest
        ports:
        - containerPort: 3003
